<resources>
    <string name="app_name">Le Vrai Évangile</string>
    <string name="lb_titile_the">Le</string>
    <string name="lb_titile_true">Vrai</string>
    <string name="lb_titile_gospel">Évangile</string>
    <string name="tab_text_video">VIDÉOS</string>
    <string name="tab_text_audio">AUDIOS</string>
    <string name="tab_text_pdf">PDF</string>
    <string name="tab_text_news">ACTUALITÉS</string>
    <string name="tab_text_goodtoknow">BON A SAVOIR</string>
    <string name="tab_text_images">IMAGES</string>ring>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="ws_url_good_toknow_detail">https://www.levraievangile.org/webservice/bon-a-savoir/webview/lire/id/{ID}/</string>
    <string name="ws_url_news_detail">https://www.levraievangile.org/webservice/actualites/webview/{ANNEE}/{MOIS}/id/{ID}/</string>
    <string name="lb_audio_player_title">Chargement en cours...</string>
    <string name="lb_audio_player_date_auteur">Veuillez patienter quelques instants...</string>
    <string name="lb_audio_player_time_progress">0 min, 4 sec</string>
    <string name="lb_audio_player_time_end">40 min, 19 sec</string>
    <string name="unstable_connection">Connexion internet instable</string>
    <string name="no_connection">Aucune connexion internet</string>
    <string name="detail_no_connection">Les données mobiles sont désactivées. Connectez-vous au réseau Wi-Fi à la place ou activez les données mobiles et réessayez.</string>
    <string name="lb_data_save">Vos données ont été enregistrées avec succès !</string>
    <string name="lb_storage_file_require">Cette permission est requise pour sauvegarder un fichier</string>
    <string name="lb_downloading">Téléchargement en cours...</string>
    <!-- lb notification radio2vie -->
    <string name="lb_buffering_title">CHARGEMENT EN COURS...</string>
    <string name="lb_buffering_detail">Mise en mémoire tempon...</string>

    <string name="video_add_to_favorite">Cette vidéo a été ajoutée à la liste des favoris</string>
    <string name="video_already_add_to_favorite">Cette vidéo a déjà été ajoutée à la liste des favoris</string>
    <string name="audio_add_to_favorite">Cet audio a été ajouté à la liste des favoris</string>
    <string name="audio_already_add_to_favorite">Cet audio a déjà été ajouté à la liste des favoris</string>
    <string name="pdf_add_to_favorite">Ce pdf a été ajouté à la liste des favoris</string>
    <string name="pdf_already_add_to_favorite">Ce pdf a déjà été ajouté à la liste des favoris</string>

    <string name="lb_impossible_toplay">LECTURE IMPOSSIBLE</string>
    <string name="lb_impossible_toplay_detail">Le fichier audio n\'a pu être lu.</string>

    <string name="lb_fermer">FERMER</string>
    <string name="image_description"></string>
    <string name="lb_yes">OUI</string>
    <string name="lb_no">NON</string>

    <string name="lb_title_confirm">DEMANDE DE CONFIRMATION</string>
    <string name="lb_msg_confirm">Voulez-vous vraiment quitter cette application?</string>
    <string name="lb_wifi_only">WI-FI EXCLUSIF</string>
    <string name="lb_wifi_exclusif_message">Aucune connexion Wi-Fi trouvée.</string>

    <string name="lb_you_are_admin">Vous êtes maintenant admin</string>
    <string name="lb_you_are_already_admin">Vous êtes déjà admin</string>

    <string name="lb_remove_sharepreferences_error">Erreur survenue pendant le nettoyage des SharePreferences</string>

    <string name="lb_notif_new_audio">Nouvel audio en ligne</string>
    <string name="lb_notif_new_video">Nouvelle vidéo en ligne</string>

    <string name="lb_pdf_reader_not_install">L\'application « PDF Reader » n\'est pas installée sur cette application.</string>
    <string name="lb_impossible_to_read_file">Impossible de lire le fichier</string>

    <string name="lb_form_search_title">EFFECTUER UNE RECHERCHE</string>
    <string name="lb_form_search_indication">La saisie du mot clé ou de l\'orateur est obligatoire</string>
    <string name="lb_form_search_select_category">Sélectionnez une ressource</string>
    <string name="lb_form_search_keyword">Mot clé ou orateur</string>
    <string name="field_requires">Ce champ est obligatoire</string>
    <string name="lb_share_app">Partager l\'application</string>

    <string-array name="form_type_ressource">
        <item>Vidéo</item>
        <item>Audio</item>
        <item>Pdf</item>
    </string-array>

    <string name="lb_top_search">Rechercher</string>
    <string name="lb_top_share">Partager</string>
    <string name="lb_top_config">Paramétrer</string>
    <string name="lb_top_contact">Nous joindre</string>
    <string name="lb_top_favorite">Mes favoris</string>
    <string name="lb_top_download">Téléchargements</string>
    <string name="lb_top_update">Mettre à jour</string>
    <string name="lb_top_parameter">Paramètres</string>

    <string name="ws_url_laisser_msg_methodpost">https://www.levraievangile.org/webservice/contact/laisser-un-message/</string>

    <string name="text_indicator_recherche">La saisie du champ « Mots clés ou orateur » est obligatoire</string>
    <string name="text_indicator_contact">Tous les champs du formulaire sont obligatoires</string>
    <string name="email_invalidate">Adresse email non valide</string>

    <string-array name="form_civility">
        <item>Monsieur</item>
        <item>Madame</item>
        <item>Mademoiselle</item>
    </string-array>

    <string name="lb_form_field_require">Tous les champs du formulaire sont obligatoires</string>
    <string name="lb_form_contact_us">LAISSER UN MESSAGE</string>
    <string name="lb_form_your_name">Votre nom</string>
    <string name="lb_form_your_email">Votre e-mail</string>
    <string name="lb_form_your_city">Votre ville</string>
    <string name="lb_form_your_message">Votre message</string>

    <string name="url_play_store">https://play.google.com/store/apps/details?id=org.levraievangile</string>
    <string name="url_partager_pdf">http://pdf.levraievangile.org/</string>
    <string name="url_partager_video">https://www.levraievangile.org/videos/lire/{TYPE}/{ID}/</string>
    <string name="url_partager_audio">https://www.levraievangile.org/audios/lire/{TYPE}/{ID}/</string>
    <string name="url_actualite_image">https://www.levraievangile.org/uploads/</string>
    <string name="title_activity_download">Mes téléchargements</string>
    <string name="title_activity_favoris">Mes favoris</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
