<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:support="http://schemas.android.com/apk/res-auto"
    tools:context="org.levraievangile.View.Activities.HomeActivity">

    <item
        android:id="@+id/action_search"
        android:title="@string/lb_top_search"
        android:icon="@drawable/ic_top_search"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_share"
        android:title="@string/lb_top_share"
        android:icon="@drawable/ic_top_share"
        support:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_config"
        android:title="@string/lb_top_config"
        android:icon="@drawable/ic_top_config"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_contact"
        android:title="@string/lb_top_contact"
        android:icon="@drawable/ic_top_contact"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_favorite"
        android:title="@string/lb_top_favorite"
        android:icon="@drawable/ic_top_favorite"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_download"
        android:title="@string/lb_top_download"
        android:icon="@drawable/ic_top_download"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_update"
        android:title="@string/lb_top_update"
        android:icon="@drawable/ic_top_update"
        app:showAsAction="never"/>

</menu>
