<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/form_search"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorLayout">

    <LinearLayout
        android:id="@+id/layout_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_header_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/size_10_dp"
                android:paddingBottom="@dimen/size_10_dp"
                android:text="@string/lb_form_search_title"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_18_sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btn_close_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:src="@drawable/btn_form_close"
                android:contentDescription="@string/image_description" />

        </RelativeLayout>

        <TextView
            android:id="@+id/texte_select_indicateur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/size_5_dp"
            android:text="@string/lb_form_search_select_category"
            android:textColor="@color/colorPrimaryOpacity70"
            android:textSize="@dimen/text_size_15_sp" />

        <Spinner
            android:id="@+id/spinner_type_ressource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_10_dp"
            android:layout_marginEnd="@dimen/size_10_dp"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/texte_search_indicateur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="@dimen/size_10_dp"
            android:textAlignment="center"
            android:text="@string/lb_form_search_indication"
            android:textColor="@color/colorPrimaryOpacity70"
            android:textSize="@dimen/text_size_15_sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10_dp"
            android:orientation="horizontal" >

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="fill_vertical"
                android:layout_weight="1"
                android:layout_margin="@dimen/size_5_dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edittexte_search"
                    android:hint="@string/lb_form_search_keyword"
                    android:inputType="textCapSentences|textMultiLine"
                    android:textColorHint="@color/colorPrimaryOpacity70"
                    android:padding="@dimen/size_5_dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"/>

            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/btn_search_validate"
                android:layout_width="@dimen/size_65_dp"
                android:layout_height="@dimen/size_65_dp"
                android:layout_marginLeft="@dimen/size_10_dp"
                android:background="@android:color/transparent"
                android:src="@drawable/btn_form_validate"
                android:contentDescription="@string/image_description" />

        </LinearLayout>

    </LinearLayout>


</ScrollView>