<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/notifAudioContent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorLayout"
    android:keepScreenOn="true">

    <TextView
        android:id="@+id/notif_player_title"
        android:text="@string/lb_audio_player_title"
        android:textSize="@dimen/text_size_18_sp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:padding="@dimen/size_5_dp"
        android:layout_margin="@dimen/size_5_dp"
        android:gravity="center"
        android:contentDescription="@string/image_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/notif_player_subtitle"
        android:text="@string/lb_audio_player_date_auteur"
        android:textSize="@dimen/text_size_15_sp"
        android:textColor="@color/colorPrimaryOpacity70"
        android:padding="@dimen/size_3_dp"
        android:gravity="center"
        android:contentDescription="@string/image_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/notif_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/logo"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/size_5_dp"
            android:contentDescription="@string/image_description" />

        <TextView
            android:id="@+id/verticalLine1"
            android:layout_margin="@dimen/size_10_dp"
            android:layout_weight="1"
            style="@style/CustomVerticalLine" />

        <ImageButton
            android:id="@+id/notif_player_previous"
            android:layout_weight="1"
            android:layout_margin="@dimen/size_5_dp"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/btn_media_player_previous"
            android:contentDescription="@string/image_description"
            android:background="@android:color/transparent"/>

        <ImageButton
            android:id="@+id/notif_player_play"
            android:layout_weight="1"
            android:layout_margin="@dimen/size_5_dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/image_description"
            android:background="@android:color/transparent"/>

        <ImageButton
            android:id="@+id/notif_player_next"
            android:layout_weight="1"
            android:layout_margin="@dimen/size_5_dp"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/btn_media_player_next"
            android:contentDescription="@string/image_description"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/verticalLine2"
            android:layout_margin="@dimen/size_10_dp"
            android:layout_weight="1"
            style="@style/CustomVerticalLine" />

        <ImageButton
            android:id="@+id/notif_player_close"
            android:layout_weight="1"
            android:layout_margin="@dimen/size_5_dp"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_player_media_cancel_32dp"
            android:contentDescription="@string/image_description"
            android:background="@android:color/transparent"/>

    </LinearLayout>


</LinearLayout>